# fhuor_text_game

./: CMakeLists.txt  README.md  main.cpp
src/: main.cpp
src/Classes (cpp_hpp files)/: eun_bi.cpp  eun_bi.hpp  player.cpp  player.hpp  waifu.cpp  waifu.hpp
